--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -5,27 +5,55 @@
 
     <div class="break rounded-circle mb-4"></div>
 
-    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing. (wip)</p>
+    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing and other applications. (<a href="https://www.dropbox.com/sh/l4zveqvy0ltd5ts/AABRxenjJsy-OHoPW4h3buuUa?dl=0">dropbox</a>)</p>
 
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
         <div class="break rounded-circle"></div>
     </div>
 
-    <div class="wep-apps align-items-center">
+    <section class="web-apps w-100 mb-4">
 
         <h3 class="mb-4">web-apps</h3>
 
-        <label for="bunease">bunease (solo)</label>
-        <a id="bunease" href="https://youtu.be/Tek0YZRpLg8" target="_blank" title="bunease-app-login" class="apps mb-5"><img src="assets/images/bunease.png" alt="bunease-app-login" class="w-75 shadow rounded"></a>
+        <div class="apps w-100">
 
-        <label for="jean-station">jean station (co-app)</label>
-        <a id="jean-station" href="https://youtu.be/MjzGi2SxHlc" class="apps mb-5" target="_blank" title="jean-station-app-login"><img src="assets/images/jean-station.png" alt="jean-station-app-login" class="w-75 shadow"></a>
-    
-        <label for="recycled-reads">recycled reads (co-app)</label>
-        <a id="recycled-reads" href="https://youtu.be/vE-NnDFHuIQ" class="apps mb-4" target="_blank" title="recycled-reads-app-login"><img src="assets/images/recycled-reads.png" alt="recycled-reads-app-login" class="w-75 shadow"></a>
+            <a href="https://youtu.be/Tek0YZRpLg8" target="_blank" class="app">
+                <label for="bunease">bunease (solo)</label>
+                <img 
+                src="assets/keyboard-assets/bunease.png" 
+                alt="bunease-app-glimpse"
+                title="bunease-app-glimpse"
+                id="bunease"
+                class="shadow"
+                >
+            </a>
 
-    </div>
+            <a href="https://youtu.be/MjzGi2SxHlc" target="_blank" class="app">
+                <label for="jean-station">jean station (co-app)</label>
+                <img 
+                src="assets/keyboard-assets/jean-station.png" 
+                alt="jean-station-app-glimpse"
+                title="jean-station-app-glimpse"
+                id="jean-station"
+                class="shadow"
+                >
+            </a>
+
+            <a href="https://youtu.be/vE-NnDFHuIQ" target="_blank" class="app">
+                <label for="recycled-reads">recycled reads (co-app)</label>
+                <img 
+                src="assets/keyboard-assets/recycled-reads.png" 
+                alt="recycled-reads-app-glimpse"
+                title="recycled-reads-app-glimpse"
+                id="recycled-reads"
+                class="shadow"
+                >
+            </a>
+
+        </div>
+
+    </section>
 
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
@@ -33,15 +61,41 @@
         <div class="break rounded-circle"></div>
     </div>
 
-    <div class="rhino-files">
+    <section class="rhino-files">
 
         <h3 class="mb-4">3 dimensional renders</h3>
 
-        <label for="vase-frame">parametric vase</label>
-        <img id="vase-frame" src="assets/images/vase-frame.png" alt="vase-frame" title="vase-frame">
-        <a id="what" href="https://youtu.be/8ueEmWLi8X8" target="_blank" class="mb-4">what's this?</a>
+        <a href="https://youtu.be/8ueEmWLi8X8" target="_blank" class="obj mb-4">
+            parametric vase
+            <img 
+            src="assets/keyboard-assets/vase-frame.png" 
+            alt="vase-render"
+            title="vase-render"
+            id="vase-render"
+            >
+        </a>
 
-    </div>
+        <a href="https://www.dropbox.com/s/0sdf9r9srjjak13/egg-packaging.pdf?dl=0" target="_blank" class="obj mb-4">
+            egg
+            <img 
+            src="assets/keyboard-assets/egg-present.png" 
+            alt="egg-present"
+            title="egg-present"
+            id="egg-present"
+            >
+        </a>
+
+        <a href="https://www.dropbox.com/sh/l4zveqvy0ltd5ts/AABRxenjJsy-OHoPW4h3buuUa?dl=0" target="_blank" class="obj mb-4">
+            phone
+            <img 
+            src="assets/keyboard-assets/phone.png" 
+            alt="phone"
+            title="phone"
+            id="phone"
+            >
+        </a>
+
+    </section>
 
     <div class="break rounded-circle mb-4"></div>
 
