--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -19,18 +19,17 @@
         <div class="apps w-100">
 
             <a href="https://youtu.be/Tek0YZRpLg8" target="_blank" class="app">
-                <label for="bunease">bunease (solo)</label>
                 <img 
-                src="assets/keyboard-assets/bunease.png" 
+                src="assets/keyboard-assets/bunease.svg" 
                 alt="bunease-app-glimpse"
                 title="bunease-app-glimpse"
                 id="bunease"
                 class="shadow"
                 >
+                <label for="bunease">bunease<br>(solo)</label>
             </a>
 
             <a href="https://youtu.be/MjzGi2SxHlc" target="_blank" class="app">
-                <label for="jean-station">jean station (co-app)</label>
                 <img 
                 src="assets/keyboard-assets/jean-station.png" 
                 alt="jean-station-app-glimpse"
@@ -38,10 +37,10 @@
                 id="jean-station"
                 class="shadow"
                 >
+                <label for="jean-station">jean station<br>(co-app)</label>
             </a>
 
             <a href="https://youtu.be/vE-NnDFHuIQ" target="_blank" class="app">
-                <label for="recycled-reads">recycled reads (co-app)</label>
                 <img 
                 src="assets/keyboard-assets/recycled-reads.png" 
                 alt="recycled-reads-app-glimpse"
@@ -49,6 +48,7 @@
                 id="recycled-reads"
                 class="shadow"
                 >
+                <label for="recycled-reads">recycled reads<br>(co-app)</label>
             </a>
 
         </div>
@@ -94,6 +94,76 @@
             id="phone"
             >
         </a>
+
+    </section>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
+    <section class="twodworks mb-4">
+
+        <h3 class="mb-4">2 dimensional graphics</h3>
+
+        <p class="lead">processing</p>
+
+        <img 
+        src="assets/keyboard-assets/misslily.png" 
+        alt="miss-lily-project"
+        title="miss-lily-project"
+        class="w-100 mb-2"
+        >
+
+        <div class="ezzys mb-2">
+            <img 
+            src="assets/keyboard-assets/ezzy-twilight.png" 
+            alt="ezzy-with-clouds-digital-sunset"
+            title="ezzy-with-clouds-digital-sunset"
+            class="ezzy w-50 m-2"
+            >
+            
+            <img 
+            src="assets/keyboard-assets/ezzy-sunset.png" 
+            alt="ezzy-with-clouds-digital-sunset"
+            title="ezzy-with-clouds-digital-sunset"
+            class="ezzy w-50 m-2"
+            >
+        </div>
+
+        <img 
+        src="assets/keyboard-assets/ezzy.png" 
+        alt="ezzy-project"
+        title="ezzy-project"
+        class="w-100 mb-2"
+        >
+
+        <p class="lead">digital collaging</p>
+
+        <div class="rogs mb-2">
+
+            <img 
+            src="assets/keyboard-assets/rog-and-robot.jpg" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="rog w-25"
+            >
+
+            <img 
+            src="assets/keyboard-assets/rog-and-wings.jpg" 
+            alt="rog-and-wings"
+            title="rog-and-wings"
+            class="rog w-25"
+            >
+
+            <img 
+            src="assets/keyboard-assets/rog-and-cat.jpg" 
+            alt="rog-and-cat"
+            title="rog-and-cat"
+            class="rog w-25"
+            >
+
+        </div>
 
     </section>
 
