--- a/src/app/pen/pen.component.html
+++ b/src/app/pen/pen.component.html
@@ -24,7 +24,7 @@
         <div class="break rounded-circle"></div>
     </div>
 
-    <a id="blog" href="https://medium.com/@ro.io" class="fs-1 text-center" target="_blank" (mouseover)="addShadow()" (mouseleave)="removeShadow()">
+    <a id="blog" href="https://rodotio.tumblr.com/" class="fs-1 text-center" target="_blank" (mouseover)="addShadow()" (mouseleave)="removeShadow()">
         <div #blog id="obj-1" class="rounded-circle mb-4">
             <p class="m-0">blog</p>
         </div>
