--- a/src/app/keyboard/keyboard.component.css
+++ b/src/app/keyboard/keyboard.component.css
@@ -41,14 +41,14 @@ a{
     text-decoration-color: rgb(84, 162, 211);
 }
 
-.web-apps, .rhino-files{
+.web-apps, .rhino-files, .twodworks{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.apps{
+.apps, .ezzys, .rogs{
     display: flex;
     flex-direction: row;
     text-align: center;
@@ -91,22 +91,16 @@ label{
     }
 
     .apps{
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 0;
+        width: 100vw;
+        justify-content: space-between !important;
+
     }
 
-    .app{
-        margin-bottom: 5vw;
-    }
-    
-    .app img{
-        width: 45vw;
-        height: 45vw;
-        border-radius: 6vw;
+    label{
+        font-size:3vw;
     }
 
-    label, .rhino-files a{
+    .rhino-files a{
         font-size:4vw;
     }
 
@@ -124,6 +118,11 @@ label{
         width: 40vw;
         height: 70vw;
     }
+
+    .ezzy{
+        width: 40vw !important;
+    }
+
 }
 
 .obj{
