--- a/src/app/social/social.component.css
+++ b/src/app/social/social.component.css
@@ -16,3 +16,14 @@
     filter: invert(60%);
     -webkit-filter: invert(60%);
 }
+
+@media only screen and (max-width: 600px) {
+    .contact-info{
+        width: 65vw !important;
+        height: 15vw;
+    }
+    .social{
+        width: 8vw;
+        height: 8vw;
+    }
+}
