--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -5,7 +5,7 @@
 
     <div class="break rounded-circle mb-4"></div>
 
-    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing and other applications. (<a href="https://www.dropbox.com/sh/l4zveqvy0ltd5ts/AABRxenjJsy-OHoPW4h3buuUa?dl=0">dropbox</a>)</p>
+    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing and other applications. (<a href="https://www.dropbox.com/sh/l4zveqvy0ltd5ts/AABRxenjJsy-OHoPW4h3buuUa?dl=0" target="_blank">dropbox</a>)</p>
 
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
