--- a/src/app/hands/hands.component.html
+++ b/src/app/hands/hands.component.html
@@ -5,7 +5,70 @@
 
     <div class="break rounded-circle mb-4"></div>
 
-    <h1 class="mb-4">wip</h1>
+    <p class="lead text-center">based in realms of tactility, 'hands' represents objects born of explorative conglomeration (wip)</p>
+
+    <p class="lead text-center">i consider myself to be a visual learner, and find that i am drawn to creation in a handsy way! i have loved (invariably so) to collect, hold, and reimagine <em>things</em> of many a nature, thus one might find my works to have a certain flavor, a sense of scrappiness to be observed. i appreciate mixed media for all that it is and can be, though different <em>things</em> strike different chords at different times.</p>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
+    <section class="apparel w-100 mb-4">
+
+        <h3 class="mb-4">handmade apparel</h3>
+
+        <div class="apparel-items w-100 mb-3">
+
+            <img 
+            src="assets/hands-assets/heart-tie-hand-sewn.png" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="apparel-item me-2"
+            >
+
+            <img 
+            src="assets/hands-assets/tongue-tied-hand-sewn.png" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="apparel-item ms-2"
+            >
+
+            <!-- <img 
+            src="assets/hands-assets/tie-and-bag-3D-pen.png" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="rog w-25"
+            >
+
+            <img 
+            src="assets/hands-assets/top-hot-glue.png" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="rog w-25"
+            > -->
+
+        </div>
+
+        <div class="apparel-items w-100 mb-4">
+
+            <img 
+            src="assets/hands-assets/tie-and-bag-3D-pen.png" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="apparel-item me-2"
+            >
+
+            <img 
+            src="assets/hands-assets/top-hot-glue.png" 
+            alt="rog-and-robot"
+            title="rog-and-robot"
+            class="apparel-item ms-2"
+            >
+
+        </div>
+
+    </section>
 
     <div class="break rounded-circle mb-4"></div>
 
