--- a/src/app/keyboard/keyboard.component.html
+++ b/src/app/keyboard/keyboard.component.html
@@ -5,7 +5,7 @@
 
     <div class="break rounded-circle mb-4"></div>
 
-    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing and other applications. (<a href="https://www.dropbox.com/sh/l4zveqvy0ltd5ts/AABRxenjJsy-OHoPW4h3buuUa?dl=0" target="_blank">dropbox</a>)</p>
+    <p class="lead">keyboard (and mouse) is a collection of web applications i have co/created, explorations of 3d digital scapes, and works forged in processing and other applications. click around to learn more! (<a href="https://www.dropbox.com/sh/l4zveqvy0ltd5ts/AABRxenjJsy-OHoPW4h3buuUa?dl=0" target="_blank">dropbox</a>)</p>
 
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
@@ -105,8 +105,9 @@
     <section class="twodworks mb-4">
 
         <h3 class="mb-4">2 dimensional graphics</h3>
+        <p>(no clicking here :o)</p>
 
-        <p class="lead">processing</p>
+        <p class="lead">** processing **</p>
 
         <img 
         src="assets/keyboard-assets/misslily.png" 
@@ -138,7 +139,7 @@
         class="w-100 mb-2"
         >
 
-        <p class="lead">digital collaging</p>
+        <p class="lead">** digital collaging **</p>
 
         <div class="rogs mb-2">
 
