--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+
+*{
+    color: rgb(70, 70, 70);
+}
