updates to hands

--- a/src/app/hands/hands.component.html
+++ b/src/app/hands/hands.component.html
@@ -18,52 +18,84 @@
 
         <h3 class="mb-4">handmade apparel</h3>
 
-        <div class="apparel-items w-100 mb-3">
+        <img 
+        src="assets/hands-assets/heart-tie.png" 
+        alt="heart-tie-handsewn"
+        title="heart-tie-handsewn"
+        class="apparel-item mb-4"
+        >
+
+        <img 
+        src="assets/hands-assets/tongue-tied.png" 
+        alt="tongue-tied-handsewn"
+        title="tongue-tied-handsewn"
+        class="apparel-item mb-4"
+        >
+
+        <img 
+        src="assets/hands-assets/string-shirt.png" 
+        alt="rope-and-glue-shirt"
+        title="rope-and-glue-shirt"
+        class="apparel-item"
+        >
+            
+    </section>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
+    <section class="head w-100 mb-4">
+
+        <h3 class="mb-4">a head</h3>
+
+        <div class="row-pics w-100">
 
             <img 
-            src="assets/hands-assets/heart-tie-hand-sewn.png" 
-            alt="rog-and-robot"
-            title="rog-and-robot"
-            class="apparel-item me-2"
+            src="assets/hands-assets/head-front.png" 
+            alt="3d-print-head-front"
+            title="3d-print-head-front"
+            class="w-50"
             >
 
             <img 
-            src="assets/hands-assets/tongue-tied-hand-sewn.png" 
-            alt="rog-and-robot"
-            title="rog-and-robot"
-            class="apparel-item ms-2"
+            src="assets/hands-assets/head-side.png" 
+            alt="3d-print-head-side"
+            title="3d-print-head-side"
+            class="w-50"
+            id="head-side"
             >
-
-            <!-- <img 
-            src="assets/hands-assets/tie-and-bag-3D-pen.png" 
-            alt="rog-and-robot"
-            title="rog-and-robot"
-            class="rog w-25"
-            >
-
-            <img 
-            src="assets/hands-assets/top-hot-glue.png" 
-            alt="rog-and-robot"
-            title="rog-and-robot"
-            class="rog w-25"
-            > -->
 
         </div>
 
-        <div class="apparel-items w-100 mb-4">
+    </section>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
+    <section class="mold w-100 mb-4">
+
+        <h3 class="mb-4">chocolate mold</h3>
+
+        <div class="row-pics">
 
             <img 
-            src="assets/hands-assets/tie-and-bag-3D-pen.png" 
-            alt="rog-and-robot"
-            title="rog-and-robot"
-            class="apparel-item me-2"
+            src="assets/hands-assets/pills-candy.png" 
+            alt="3d-print-head-side"
+            title="3d-print-head-side"
+            class="w-50"
+            id="candy"
             >
 
             <img 
-            src="assets/hands-assets/top-hot-glue.png" 
-            alt="rog-and-robot"
-            title="rog-and-robot"
-            class="apparel-item ms-2"
+            src="assets/hands-assets/pills.png" 
+            alt="3d-print-head-side"
+            title="3d-print-head-side"
+            class="w-50"
             >
 
         </div>
