--- a/src/app/hands/hands.component.css
+++ b/src/app/hands/hands.component.css
@@ -22,23 +22,31 @@
     margin: 3px;
 }
 
-.apparel{
+.apparel, .head, .mold{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.apparel-items{
+.row-pics{
     display: flex;
     flex-direction: row;
     text-align: center;
-    justify-content: center;
+    justify-content:center;
+}
+
+#head-side{
+    height: 50vw;
+}
+
+#candy{
+    height: 35vw;
 }
 
 .apparel-item{
-    width: 30vw;
-    height: 30vw;
+    width: 50vw;
+    height: auto;
 }
 
 @media only screen and (max-width: 600px) {
@@ -48,21 +56,21 @@
         height:22vw;
     }
 
-    .apparel-items{
+    /* .apparel-items{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         margin-bottom: 0 !important;
-    }
+    } */
 
     .apparel-item{
-        margin-top: 0 !important;
+        /* margin-top: 0 !important;
         margin-left: 0 !important;
         margin-right: 0 !important;
-        margin-bottom: 3vw;
+        margin-bottom: 3vw; */
 
-        width: 60vw;
-        height: 60vw;
+        width: 100vw;
+        height: auto;
     }
 }
