--- a/src/app/hands/hands.component.html
+++ b/src/app/hands/hands.component.html
@@ -14,6 +14,25 @@
         <div class="break rounded-circle"></div>
     </div>
 
+    <section class="portrait w-100 mb-4">
+
+        <h3 class="mb-4">3d portrait</h3>
+
+        <img 
+        src="assets/hands-assets/portrait.png" 
+        alt="3d portrait in frame"
+        title="3d portrait in frame"
+        class="mixed-media"
+        >
+
+    </section>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
     <section class="apparel w-100 mb-4">
 
         <h3 class="mb-4">handmade apparel</h3>
@@ -42,6 +61,7 @@
     </section>
 
     <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
         <div class="break rounded-circle"></div>
         <div class="break rounded-circle"></div>
         <div class="break rounded-circle"></div>
@@ -75,6 +95,7 @@
     <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
         <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
     </div>
 
     <section class="mold w-100 mb-4">
@@ -99,6 +120,24 @@
             >
 
         </div>
+
+    </section>
+
+    <div class="break-holder mb-4">
+        <div class="break rounded-circle"></div>
+        <div class="break rounded-circle"></div>
+    </div>
+
+    <section class="skateboard w-100 mb-4">
+
+        <h3 class="mb-4">skateboard</h3>
+
+        <img 
+        src="assets/hands-assets/skateboard.png" 
+        alt="mixed media skateboard"
+        title="mixed media skateboard"
+        class="mixed-media"
+        >
 
     </section>
 
