--- a/src/app/pen/pen.component.html
+++ b/src/app/pen/pen.component.html
@@ -5,7 +5,7 @@
 
     <div class="break rounded-circle mb-4"></div>
 
-    <p class="lead bg-color-primary text-center">here lies some of my written work! i am exploring all that it is to write, the meaning and power words do hold, and the un/intentional erasure carried out by these vessels. responsible creation is something i aspire to contend with.</p>
+    <p class="lead bg-color-primary text-center">here lies some of my written work! i am exploring all that it is to write, the meaning and power words do hold, and the un/intentional erasure carried out by these vessels. responsible creation is something i aspire to contend with. (w.i.p.)</p>
 
     <p class="lead bg-color-primary text-center">currently, i am learning more about dramaturgy, and have outlined several plays to further flesh out-Caryl Churchill, Josefina Báez, Lester Mayers, and Duncan Macmillan have inspired me thus far, lots still yet to learn!</p>
 
@@ -19,7 +19,7 @@
         <p><a href="https://www.dropbox.com/s/u0zdmbxkz531dig/research-narrative.pdf?dl=0" target="_blank">narrative as research</a>: call-to-action that demands transparent research and subsequent uses, an expanded scope of what constitutes a "reputable source," and in-depth look into what personal failure and scrappiness allow across personal and "professional" realms of existence</p>
     </div>
 
-    <div class="break-holder mb-4">
+    <!-- <div class="break-holder mb-4">
         <div class="break rounded-circle"></div>
         <div class="break rounded-circle"></div>
     </div>
@@ -28,7 +28,7 @@
         <div #blog id="obj-1" class="rounded-circle mb-4">
             <p class="m-0">blog</p>
         </div>
-    </a>
+    </a> -->
 
     <div class="break rounded-circle mb-4"></div>
 
