--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -1,6 +1,6 @@
 <div class="contact-info w-50 shadow rounded-pill mt-2 mb-5 d-flex justify-content-around mx-auto">
     <a href="mailto: mattrogerpelosi@gmail.com"><img src="assets/logos/email.png" alt="email" title="mailto" class="social"></a>
-    <a href="https://rodotio.tumblr.com/" target="_blank"><img src="assets/logos/tumblr.png" alt="tumblr" title="tumblr" class="social"></a>
+    <!-- <a href="https://rodotio.tumblr.com/" target="_blank"><img src="assets/logos/tumblr.png" alt="tumblr" title="tumblr" class="social"></a> -->
     <a href="https://github.com/rogerpelosi" target="_blank"><img src="assets/logos/github.png" alt="github" title="github" class="social"></a>
     <a href="https://www.linkedin.com/in/rogerpelosi/" target="_blank"><img src="assets/logos/linkedin.webp" alt="linkedin" title="linkedin" class="social"></a>
     <a href="tel:5185380399"><img src="assets/logos/phone.png" alt="phone" title="call" class="social"></a>
