updating brief bio and home photo

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -17,7 +17,7 @@
 .img{
     width: 25vw;
     height: 25vw;
-    background-image: url(src/assets/headshot.png);
+    background-image: url(src/assets/headshot.JPG);
     background-size: cover;
 }
 
