--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,7 +63,7 @@
             <div class="break rounded-circle"></div>
         </div>
         <h3>experience</h3>
-        <p class="pb-0 mb-0">i've been with CGI CMIPS since March 2022, and was at my university library for 3 years prior! interned with Selux (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank”>see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-with two intentional f's. i have 6 years of customer service experience across varying industries, including grocery, food, and retail, along with some door-to-door canvassing</p>
+        <p class="pb-0 mb-0">i've been the CGI CMIPS release manager since March 2022, and was at a university library for 3 years prior! interned with Selux (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank”>see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-with two intentional f's. i have 6 years of customer service experience across varying industries: grocery, food, retail, and some door-to-door canvassing</p>
     </div>
 
     <!-- CONTACT ELEMENT -->
