adding background div/holder for avatar, updating cv, and adding capacitor to skill list

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,14 +5,17 @@
     <!-- INTRODUCTION ELEMENT -->
     <div class="intro d-flex align-items-center">
         <div class="break rounded-circle mb-4"></div>
-        <div class="img rounded-circle"></div>
+        <div class="imgholder align-items-center rounded-circle ">
+            <div class="img rounded-circle shadow"></div>
+        </div>
+        <!-- <div class="img rounded-circle"></div> -->
         <h1 class="display-2 mt-1 mb-0">hello!</h1>
         <h2 class="display-5 mb-1">my name is roger,</h2>
         <h3 class="fw-light">a bit about me</h3>
         <section class="documents align-items-center">
             <!-- <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a> -->
             <a href="assets/docs/rp.TR.pdf" class="p-1" target=”_blank”>tech resume</a>
-            <a href="assets/docs/rp.CV.pdf" class="p-1" target=”_blank”>cv</a>
+            <a href="assets/docs/rp.RR.pdf" class="p-1" target=”_blank”>cv</a>
         </section>
     </div>
 
@@ -47,6 +50,7 @@
         <div class="logos">
             <img src="assets/logos/angular.png" alt="angular" class="logo" title="angular">
             <img src="assets/logos/java.png" alt="java" class="logo" title="java">
+            <img src="assets/logos/cap.png" alt="capacitor" class="logo" title="capacitor">
             <img src="assets/logos/typescript.png" alt="typescript" class="logo" title="typescript">
             <img src="assets/logos/javascript.png" alt="javascript" class="logo" title="javascript">
             <img src="assets/logos/processing.png" alt="processing" class="logo" title="processing">
