--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,6 +14,15 @@
     opacity: .75;
 }
 
+.imgholder{
+    width: 27vw;
+    height: 27vw;
+    display: flex;
+    flex-direction: column;
+    background-color: aliceblue;
+    justify-content: center;
+}
+
 .img{
     width: 25vw;
     height: 25vw;
@@ -60,6 +69,11 @@ li{
     #home{
         width:20vw;
         height:20vw;
+    }
+
+    .imgholder{
+        width:32vw;
+        height:32vw;
     }
 
     .img{
