removing pen tab from navigation, backloading resume/cv, underlining links if viewing with mobile device, re-ordering to hands about keyboard for nav layout

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -62,7 +62,7 @@ li{
         text-align: justify;
     }
 
-    a{
+    a, .link{
         text-decoration:underline 0.15em rgb(84, 162, 211);
     }
 
