--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,11 +12,11 @@
         <h1 class="display-2 mt-1 mb-0">hello!</h1>
         <h2 class="display-5 mb-1">my name is roger,</h2>
         <h3 class="fw-light">a bit about me</h3>
-        <section class="documents align-items-center">
-            <!-- <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a> -->
+        <!-- <section class="documents align-items-center">
+            <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a>
             <a href="assets/docs/rp.TR.pdf" class="p-1" target=”_blank”>tech resume</a>
             <a href="assets/docs/rp.RR.pdf" class="p-1" target=”_blank”>cv</a>
-        </section>
+        </section> -->
     </div>
 
     <!-- EDUCATION ELEMENT -->
@@ -67,7 +67,12 @@
             <div class="break rounded-circle"></div>
         </div>
         <h3>experience</h3>
-        <p class="pb-0 mb-0">i've been the CGI CMIPS release manager since March 2022, and was at a university library for 3 years prior! interned with Selux (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank”>see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-with two intentional f's. i have 6 years of customer service experience across varying industries: grocery, food, retail, and some door-to-door canvassing</p>
+        <section class="documents align-items-center">
+            <!-- <a href="assets/docs/rp.SS.pdf" class="p-1" target=”_blank”>skill summary</a> -->
+            <a href="assets/docs/rp.TR.pdf" class="p-1 link" target=”_blank”>tech resume</a>
+            <a href="assets/docs/rp.RR.pdf" class="p-1 link" target=”_blank”>cv</a>
+        </section>
+        <p class="pb-0 mb-0">i've been the CGI CMIPS release manager since March 2022, and was at a university library for 3 years prior! interned with Selux (<a href="https://www.dropbox.com/s/6equc2if5f2y4sa/Selux%20Module%20Proposal.pdf?dl=0" target=”_blank” class="link">see final proposal here</a>), the Hudson Valley LGBTQ Center, and Caffé Lena-with two intentional f's. i have 6 years of customer service experience across varying industries: grocery, food, retail, and some door-to-door canvassing</p>
     </div>
 
     <!-- CONTACT ELEMENT -->
