--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,8 @@
 <section id="navigation-container" class="row w-50 mx-auto mt-4 rounded-circle row align-items-center shadow">
 
-    <a id="home-link" class="col col-12" [routerLink]="['home']" routerLinkActive="active">home</a>
-    <a id="pen-link" class="col col-12" [routerLink]="['pen']" routerLinkActive="active">pen</a>
     <a id="hands-link" class="col col-12" [routerLink]="['hands']" routerLinkActive="active">hands</a>
+    <a id="home-link" class="col col-12" [routerLink]="['about']" routerLinkActive="active">about</a>
+    <!-- <a id="pen-link" class="col col-12" [routerLink]="['pen']" routerLinkActive="active">pen</a> -->
     <a id="keyboard-link" class="col col-12" [routerLink]="['keyboard']" routerLinkActive="active">keyboard</a>
 
 </section>
